# formfunction-campaign-treasury-manager

./: README.md  jest.config.ts  package.json  tsconfig.build.json  tsconfig.json
keys/: README.md
keys/testnet/: program-keypair.json
programs/campaign-treasury-manager/: Cargo.toml
programs/campaign-treasury-manager/src/: constants.rs  errors.rs  lib.rs
programs/campaign-treasury-manager/src/instructions/: close_deposit_escrow.rs  close_deposit_record.rs  close_escrow.rs  create_deposit.rs  create_deposit_escrow.rs  create_escrow.rs  mod.rs  pay_out_funds.rs  process_deposit.rs  process_partial_refund.rs  process_refund.rs  update_escrow.rs  veto_payout_phase.rs
programs/campaign-treasury-manager/src/state/: campaign_escrow.rs  deposit_escrow.rs  deposit_record.rs  mod.rs  payout_phases.rs  treasury_escrow.rs
programs/campaign-treasury-manager/src/utils/: buffer_times.rs  mod.rs  utils.rs  validate_cpi_invocation.rs
scripts/: deploy-program.sh  setup-idl.sh  test-program.sh
scripts/anchor-configs/: Anchor-dev.toml  Anchor-local.toml  Anchor-test.toml
src/: index.ts
src/scripts/: exampleScript.ts  lintProgramIdl.ts  modifyProgramIdl.ts
src/scripts/utils/: parseScriptArgs.ts
src/sdk/: CampaignTreasuryManagerSdk.ts
src/sdk/constants/: AccountPrefixes.ts  ProgramErrorName.ts  ProgramIds.ts
src/sdk/idl/: CampaignTreasuryManager.ts  convertIdlForAnchorProgram.ts  index.ts
src/sdk/instructions/: closeDepositEscrowIx.ts  closeDepositRecordIx.ts  closeEscrowIx.ts  createDepositEscrowIx.ts  createDepositIx.ts  createEscrowIx.ts  (+6 more)
src/tests/: setup.ts
(+60 files in other folders)
